all kill for force push

--- a/panthers.yaml
+++ b/panthers.yaml
@@ -5,15 +5,4 @@ manager: Sebastian
 coach: Shirley
 
 members:
-- Violet
-- Stella
-- Anthony
-- Freddie
-- Arachi
-- Mami
-- Father
-- Brother
-- Sister
-- Aunt
-- Son
-- Friend
+- All kill
